updated gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@
 
 # Ignore bundler config.
 /.bundle
-
+# Ignore vendor/bundle
+/vendor/bundle
 # Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
@@ -15,3 +16,4 @@
 /log/*
 !/log/.keep
 /tmp
+/.DS_Store
