try to resuscitate webpack changes from stash

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@
 # Ignore .envrc
 /.envrc
 /config/application.yml
+# React on Rails
+npm-debug.log
+node_modules
+
+# Generated js bundles
+/app/assets/javascripts/generated/*
