--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "jscs": "jscs --verbose ."
   },
   "dependencies": {
+    "axios": "^0.9.1",
     "babel": "^6.3.26",
     "babel-cli": "^6.4.5",
     "babel-core": "^6.4.5",
@@ -59,6 +60,7 @@
     "webpack": "^1.12.12"
   },
   "devDependencies": {
+    "axios": "^0.9.1",
     "babel-eslint": "^5.0.0-beta6",
     "babel-plugin-react-transform": "^2.0.0",
     "bootstrap-sass": "^3.3.6",
