--- a/client/package.json
+++ b/client/package.json
@@ -59,11 +59,16 @@
     "react-addons-css-transition-group": "^0.14.7",
     "react-bootstrap": "^0.28.3",
     "react-dom": "^0.14.7",
+    "react-loader": "^2.2.0",
     "react-on-rails": "3.0.5",
     "react-redux": "^4.4.0",
+    "react-spin": "^0.6.0",
+    "react-spinjs": "^2.0.1",
+    "react-spinner": "^0.2.3",
     "redux": "^3.3.1",
     "redux-promise": "^0.5.1",
     "redux-thunk": "^1.0.3",
+    "spin.js": "^2.3.2",
     "webpack": "^1.12.13"
   },
   "devDependencies": {
