--- a/client/package.json
+++ b/client/package.json
@@ -54,6 +54,7 @@
     "jquery-ujs": "^1.2.0",
     "loader-utils": "^0.2.12",
     "lodash": "^4.3.0",
+    "marked": "^0.3.5",
     "mirror-creator": "^1.0.0",
     "react": "^0.14.7",
     "react-addons-css-transition-group": "^0.14.7",
