--- a/client/package.json
+++ b/client/package.json
@@ -56,6 +56,7 @@
     "lodash": "^4.3.0",
     "marked": "^0.3.5",
     "mirror-creator": "^1.0.0",
+    "moment": "^2.12.0",
     "react": "^0.14.7",
     "react-addons-css-transition-group": "^0.14.7",
     "react-bootstrap": "^0.28.3",
