--- a/package.json
+++ b/package.json
@@ -31,5 +31,9 @@
   "homepage": "https://github.com/shakacode/react-webpack-rails-tutorial",
   "dependencies": {
     "rdx-ui-spinner": "0.0.1"
+  },
+  "devDependencies": {
+    "eslint-config-standard": "^5.1.0",
+    "eslint-plugin-standard": "^1.3.2"
   }
 }
