--- a/client/package.json
+++ b/client/package.json
@@ -52,6 +52,7 @@
     "imports-loader": "^0.6.5",
     "jquery": "^2.2.0",
     "jquery-ujs": "^1.2.0",
+    "json-loader": "^0.5.4",
     "loader-utils": "^0.2.12",
     "lodash": "^4.3.0",
     "marked": "^0.3.5",
@@ -62,11 +63,9 @@
     "react-bootstrap": "^0.28.3",
     "react-dom": "^0.14.7",
     "react-loader": "^2.2.0",
+    "react-markdown": "^2.2.0",
     "react-on-rails": "3.0.5",
     "react-redux": "^4.4.0",
-    "react-spin": "^0.6.0",
-    "react-spinjs": "^2.0.1",
-    "react-spinner": "^0.2.3",
     "redux": "^3.3.1",
     "redux-promise": "^0.5.1",
     "redux-thunk": "^1.0.3",
