--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
   "devDependencies": {
     "eslint-config-standard": "^5.1.0",
     "eslint-plugin-standard": "^1.3.2"
+  },
+  "dependencies": {
+    "sanitize-html": "^1.11.4"
   }
 }
